apps/architecture-portal/versioned_docs/version-1.0.32.0/hosts/creator-web.mdx
---
title: Creator Web Host
area: hosts
status: implemented
host: creator-web
owners: [product, hosts, web]
source_paths:
  - apps/creator-web
  - apps/creator-web/module.json
  - packages/web-runtime-platform
  - products/lmdj/assembly.json
  - docs/quality/2026-08-07-stage7-creator-editor-acceptance.md
  - docs/quality/2026-08-09-stage8-sample-editor-acceptance.md
  - docs/quality/2026-08-16-stage8b-pad-capture-acceptance.md
  - docs/quality/2026-08-24-creator-capture-precommit-crop.md
  - docs/superpowers/specs/2026-08-23-creator-capture-precommit-crop-design.md
  - docs/superpowers/plans/2026-08-17-lmdj-creator-capture-ui-remediation.md
  - docs/prd/decisions/2026-08-24-capture-panel-modal-and-trim-handles.md
  - docs/prd/decisions/2026-08-24-capture-input-gate-and-identity.md
  - docs/superpowers/plans/2026-08-24-lmdj-capture-input-gate-and-identity.md
  - scripts/creator-web.sh
  - tests/platform/web/creator
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';
import {StatusBadge} from '@site/src/components/StatusBadge';

<BuildIdentity />

## 状态

<StatusBadge status="implemented" /> Creator Web Host `1.5.4` 已进入 Product Build `1.0.32.0` Assembly。它只依赖共享 Web Runtime Platform `0.3.5`，不直接依赖或绕过 Application Facade；Capture 面板是视口锚定的模态对话框（P2-D1/P2-D2，修复 2026-08-17 实机会话的 F1/F2），固定几何、进入 recording 不改变外框、焦点随阶段主操作迁移、关闭恢复发起控件；Sample trim 手柄是可见握把加中点划界的指针模型（P2-D3，修复同一 session 的 F5）；`DUPLICATE_ID` 从 fatal 呈现改为可恢复呈现并给出 `Open local Project` 恢复控件（P2-D4，修复同一 session 的 F3）；提交前输入电平门拒绝整段数字静音的 take、面板内说明原因且 take 保留，并在 recording/trimming 阶段显示当前输入设备名、录音期间对设备集合变化给出非阻塞提示（2026-08-24 决策选项 a + b，修复同一 session 的 F4，不引入设备选择器）；录音阶段显示完整缓冲，trimming 与提交重试阶段以固定 400 bins 显示当前选区，并可把严格子选区真正 Crop 成归零的新缓冲 revision。

## 创作边界

当前 UI 提供 browser-local Project discovery/open、portable Project Bundle import、64 个稳定 Pad Slot、四个 Bank、Sample Surface、PCM16 WAV import/replace、麦克风 Pad Capture（录音→trimming→可选 Crop→提交）、真实 mirrored waveform、trim/四模式/Volume/Mute/Reset、Project inspect 与 Runtime diagnostics。Capture 的录音波形覆盖全部已录帧；进入 trimming 后，同一画布随 selection start/length 缩放，只读取选区范围，长窗口只复用完全落入 bin 的增量 block peaks，边缘 block 精确扫描，避免选区外峰值泄漏。**Crop to selection** 会在同一个 Host-local `CaptureBuffer` 中保留精确 mono/stereo PCM、把首帧重置为 0，并在发布前完整重建 chunks、索引与 block peaks；cache 与所有字段作为同一 revision 切换，旧区间 peak 不会泄漏。重复 Crop 和 Crop 后继续 append 仍受相同边界约束；无效 Crop 原子拒绝。Capture 面板以原生 `<dialog>` + `showModal()` 模态呈现，与 ConfirmationDialog 共用同一套 inert 背景、遮罩、Tab 圈禁与 returnFocus 机制：宽度 `min(44rem, calc(100vw - 2rem))`、最大高度 `calc(100dvh - 2rem)` 内部滚动；Header、固定高度波形/电平区与底部操作行三个固定区域，进入 recording 只换内容、不改变外框，`Stop` 与 `Record into Pad N` 同位——面板及其主操作构造上必然在视口内，不再依赖 Pad grid 高度。打开时焦点落在当前阶段主操作；阶段切换若卸载被聚焦控件，焦点迁往新阶段主操作而不回落 `<body>`；Escape 在任意阶段关闭并先停止进行中的录音；遮罩 pointer-down 不驳回会话；关闭后焦点恢复发起按钮，失效时回退遮罩外第一个可聚焦元素。Sample trim 的每条 handle 线渲染为可见握把（14px 竖条加顶端/底端 grip 指示），命中区以 handle 线为中心向两侧各 12px、并以两条 handle 线的中点划界互不重叠，两值相邻时各区缩为间距的一半，任意缩放级别下两柄独立可达；只有握把显示 `ew-resize` 光标与 hover 态。握把内按下即抓住该柄，拖动保留抓取偏移（handle 跟随指针增量，任何按下都不会把 trim 点跳到点击的轨道位置），pointercancel/Escape 取消并还原；波形主体在两柄命中区之外按下不移动任何 trim 点。两个 input[type=range] 仍是键盘/辅助技术通道（实时秒值 accessible name、方向键微调、Shift 粗调、Escape 取消、数值输入框），已移出指针路径（pointer-events: none）并视觉隐藏但保持可聚焦。重新 import 一个本地 Project 已分叉的 Bundle 会被 Core 拒绝为 `DUPLICATE_ID`：错误面板不再以 fatal 的「Creator unavailable」呈现，而是以「Project already on this device」命名真实情形、说明本地副本有更新的改动且无数据丢失，并给出 `Open local Project` 恢复控件——走与 `Open local` 相同的本地 Projects 列表路径，经既有 listing 流程消除错误面板，无需 reload；Runtime 的 `DUPLICATE_ID` 不携带 Project 身份细节且 Host 不解析 Bundle，因此恢复目标是列表而非直接打开。其他错误码的标题、文案与重试接线不变。提交 Capture 前，Host 对整段 take 做输入电平门：峰值由 append 时增量维护的 block peaks 精确读出（O(blocks)，不重扫 PCM），严格全零即数字静音——OS 静默切换默认输入（如 macOS Continuity 改路由到 iPhone）的实机症状——此时拒绝提交、在面板内以 `role="alert"` 说明「采集到完全静音，输入设备可能被系统切换」，take 保留、操作者可重录或丢弃；门限读整段 take 而非当前选区，且只有严格零触发，低电平但非零的真实录音绝不受阻。Capture 面板在 recording 与 trimming 阶段显示当前输入设备名（采集流 `MediaStreamTrack.label`，经 controller 暴露；浏览器扣留标签时退化显示 `Default input` 占位），并在录音期间监听 `navigator.mediaDevices` 的 `devicechange`（缺失时守卫跳过），设备集合变化时给出非阻塞面板内提示，监听与 blur/hidden 监听同域、随 recording 阶段结束移除。输入设备选择器仍是 `1.0.23.0` 起已声明的范围边界，本 Build 不引入。Host 不解析 Bundle 或 WAV；字节流和 mutation 交给 Facade，Project Truth、revision 与 Runtime publication 仍由 Core 决定。Capture 只是既有 import 边界的一个新字节来源：Host 在提交时把当前选区编码为 48 kHz PCM16 WAV，经同一条 `sample.import.*` 会话入 Core，Core Modules、Facade 表面、传输协议与全部 Contract 零变更。Host JS 缓冲上限 60 秒、到顶自动停，提交选区硬性上限 240,000 帧（5 秒），沿用活动 manifest 的 `decoded_frames_per_pad`；录音期间无输入监听，输入永不接到输出。空白 Project 创建、Bundle 导出与 Sequence 编辑尚未实现。

Open local 在已有 Project 时仍保持可达；list/import/open/reopen 属于同一串行 Project action 边界，后发 action 不得与旧 action 重叠或提交过期结果。旧 Runtime generation 的 import 被 replacement 取消时，过期 action 不能提交 Project 结果，但它拥有的 transfer UI 必须独立回到 `idle`，避免新 Session 已 ready 而 Creator 永久显示 `importing`。persisted `pagehide` retains the shared Runtime 并进入受控恢复契约；non-persisted terminal `pagehide` performs close。新 Runtime generation 只能在旧 generation 的资源清理完成后接管，Project 会自动 reopen，但 Audio 必须保持 inactive，直到用户再次按下 Activate audio。

## 演奏边界

Creator 使用共享 Runtime Session 进入同一 Wasm Core、OPFS 与 AudioWorklet 路径。Pointer、Keyboard 与 MIDI 使用统一输入 adapter。默认实体键盘按空间顺序映射：上方 `Q W E R T Y U I` 对应当前 Bank 的 Pad 1–8，下方 `A S D F G H J K` 对应 Pad 9–16；每个 Pad 从同一共享 mapping truth 派生并显示键帽提示。用户明确授权 Web MIDI 后，Creator 在 channels 1–16 上接受 Note `36..51` 并映射到当前 Bank；Platform 的可选单 channel filter 不由 Creator 启用。每个 Sample press 以串行 inspect→trigger admission 确定 Runtime-effective playback，release/cancel/stop 与 ordered Voice state 共同维护视觉和真实声音。saved Project revision 与 Runtime revision 分开显示，Cook 失败只重试 prepare、不重放 mutation。恢复期间只有 Platform diagnostics 证明唯一 recovery probe window 已 armed 时才开放一个真实 Trigger；Probe 后立即重新封闭输入，直到 Runtime 报告 `running`。未完成的物理设备/延迟验收不会被 UI 可用性或 Playwright 结果替代。

## 分发与身份

`scripts/creator-web.sh package` 生成内容哈希资产和 canonical Creator distribution manifest；manifest 绑定 Product Build、Host、Platform、协议、固定 Emscripten 身份、heap 与资源上限，并显式声明兼容的诊断 Host 身份。共享 native manifest gate 只接受 Product Assembly 注入的精确 Host/contract/version 组合。该同构建 manifest ownership 协议不是公开跨版本 Contract。

## 自动化证据

Node/Vitest 覆盖 UI 状态、Sample state/action/input/control/waveform/file/lifecycle/recovery/privacy、Capture range validation/cache/chunk/stereo/block-edge correctness、整数 bin 边界、late-range chunk traversal、selection-driven repaint，Crop 的跨 chunk 精确 PCM、原子拒绝、summary 重建、重复编辑、append-after-Crop、同实例 Commit 与 commit-error 恢复，以及模态 Capture 面板的焦点迁移（打开聚焦主操作、recording → Stop、trimming → Commit、关闭恢复发起控件）、Escape 关闭与遮罩不驳回，和 trim 握把的按柄抓取（近左线按下只动 Start、近右线只动 End，与按下高度无关）、按下不跳变、拖动保留抓取偏移、波形中段按下惰性、相邻两柄中点划界各半均可抓、disabled/无效 envelope 移除握把指针路径，以及 `DUPLICATE_ID` 的可恢复呈现（非 fatal 标题、说明无数据丢失、`Open local Project` 恢复控件）与点击恢复后面板消除并落在本地 Projects 列表，和 F4 的提交前静音门（整段全零 take 拒绝提交、面板内说明且 take 保留可丢弃重录、低电平非零 take 照常提交、门限读整段 take 而非选区）、输入设备名在 recording/trimming 的显示与空标签占位、以及 `devicechange` 提示在 recording 阶段出现并随阶段结束移除监听；Python 覆盖 deterministic/atomic package 和 secure server；required Playwright lane 用真实 Facade 完成 v1→v2、WAV、四模式、Cook split/retry/reload、16-trigger mapping、active resize 与 restart-required replacement，以 `boundingBox` 断言 Capture 面板主操作与 Stop 在 1280×720 短视口内，并断言 Start/End 握把的指针拖动只移动对应 trim 点、另一 trim 点不变，另跑通 import→本地分叉→再 import→`DUPLICATE_ID` 可恢复呈现→`Open local Project` 恢复并打开本地 Project 的全程无 reload journey，另证 WebKit capability boundary。Chromium 假设备回放合成音，现有采集 journey 均走非静音路径；静音拒绝路径由 Vitest 组件测试把关，当前 harness 无法让假设备发出数字静音。Product Build `1.0.32.0` 统一绑定 Creator `1.5.4`、Platform `0.3.5` 与 Formal Host `1.2.14`，并组合上述 F1–F4/F5 修复与 F6 Core Module identity 级联。Product Build `1.0.31.0` 曾将 `native-test-host` 改名为 Native Host；Product Build `1.0.30.0` 绑定 Creator `1.4.0` 的 pre-commit Crop；Product Build `1.0.29.0` 绑定 Creator `1.3.6` 的选区波形缩放修正；`1.0.28.0` / Creator `1.3.5` 是未通过独立审查的 branch-local 候选。Product Build `1.0.27.0` 绑定 Creator `1.3.4`、Platform `0.3.4` 与 Formal Host `1.2.13`；那是 Native complete-read 修复的 identity 级联。历史构建的本地 Proof 不能替代本构建重新执行的 clean-source Proof、Portal、CI、tag、发布或部署证据。

自动化结论不是物理 Safari/Chrome Pointer、Chrome MIDI、iPadOS Touch/lifecycle 验收，也不表示 CI、merge、tag、部署或 Channel promotion 已完成。

## 非能力

当前不宣称离线安装/PWA、云同步、协作、素材智能、Sequence 编辑、生产部署、`beta`/`stable` 或物理设备体验已完成。Crop 只修改未提交的 ephemeral capture；没有 Undo/redo/edit history，不修改已持久化 Asset，不做自动 silence trimming、fade、normalize 或其他 DSP。Pad Capture 的自动化把关限于 Chromium 假设备：macOS Chrome 真实麦克风听感已于 2026-08-17 在 `1.0.23.0` 实机通过（五条听感判据含大电平不削波），外置声卡输入、Safari 桌面与 iPadOS 的采集行为仍记入 deferred 台账，未做即不计入；该次实机 session 返回的 F1–F6 六项发现已由 Product Build `1.0.32.0` 组合修复，但手工复验（补救计划 Task 5、F4 触发行及 F6 M2 检查）尚未执行，自动化修复不会升级任何物理行。输入设备选择器、长素材共享 prepared-PCM 配额与 Take/Pattern 录制不属于本 Build。
